tests/e2e/semantics/assignment_array_index_invalid3.error
Error: syntax error in story at line 2, column 1

2|    a[0]["foo"] = 2
      ^^^^^^^^^^

E0104: `List[int]` can't be indexed with `foo` of type `string`
