tests/e2e/semantics/assignment_array_index_invalid3.story
a = [[1]]
a[0]["foo"] = 2
